# unsloth-finetune-demo

./: .gitignore  .pre-commit-config.yaml  README.md  finetune.py  inference.py  inference_vllm.py  pyproject.toml
docs/: architecture.md  inference.md  training.md
src/unsloth_demo/: __init__.py  config.py  data.py  model.py  training.py
src/unsloth_demo/cli/: __init__.py  finetune.py  inference.py
