[project]
name = "unsloth-finetune-demo"
version = "0.1.0"
description = "Unsloth fine-tuning demo for Nemotron-Nano-4B on function calling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "peft>=0.18.0",
    "unsloth>=2025.12.10",
    "unsloth-zoo>=2025.12.8",
]

[project.optional-dependencies]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
